# FogConnect

./: .gitignore  Makefile  README.md
doc/: PTP-Connect协议栈.md  benchmark.md  function.md  getting_started.md
doc/images/: fogconnectstack.vsdx
examples/: CMakeLists.txt  Makefile  fog_connect.c  fog_connect.h  fogconnect.h  pr_fog_connect.c  pr_fog_connect.h
examples/benchmark/: CMakeLists.txt
examples/echo/: CMakeLists.txt  client.c  server.c
examples/filetransfer/: CMakeLists.txt  client.c  ser.c  ser.h  server.c
examples/getaddr/: pr_get_addr.c
examples/hub/: CMakeLists.txt  codec.c  codec.h  codec_test.c  hub.c  pub.c  pubsub.c  pubsub.h  sub.c
include/: fogconnect.h
mips/: Makefile  pr_client.c  pr_server.c
x86/linux/64/: Makefile  pr_client.c  pr_server.c
